# coxeter

./: AUTHORS  INTRO.tex  LICENSE  Makefile.am  README  affine.cpp  affine.h  automata.cpp  automata.h  bits.cpp  bits.h  cells.cpp  cells.h  commands.cpp  commands.h  configure.ac  constants.cpp  constants.h  coxgroup.cpp  coxgroup.h  coxtypes.cpp  coxtypes.h  dictionary.h  dictionary.hpp  directories.h  dotval.h  error.cpp  error.h  fcoxgroup.cpp  fcoxgroup.h  files.cpp  files.h  files.hpp  general.cpp  general.h  globals.h  graph.cpp  graph.h  hecke.h  hecke.hpp  (+55 more)
coxeter_matrices/: 5335  E12  E13  E14  a2  a3  a4  a5  b5  d5  howlett1  howlett2_4  howlett2_7  howlett2_8  star_4,4,4  star_5,5,5  star_5,5,8  trial
headers/: GAPcells2  GAPclosure1  GAPclosure2  GAPclosure5  GAPduflo  GAPlcellorder  GAPlcells  GAPlcellwgraphs  GAPlcorder  GAPlrcells  GAPlrcorder  GAPlrwgraph  GAPrcellwgraphs  GAPrcorder  GAPslocus  GAPsstratification  (+13 more)
interface/: Makefile.am  dictionary.h  directories.h  help.cpp  io.cpp  special.cpp
interface/headers/: GAPbasis  GAPclosure  GAPclosure3  GAPclosure4  GAPclosure6  GAPlrcellorder  GAPlrcellwgraphs  GAPlwgraph  GAPrcellorder  GAPrcells  GAPrwgraph  terse_closure2  terse_closure3  terse_closure4  terse_generators  terse_lcellorder  terse_lcells  terse_lcellwgraphs  terse_lrcellorder  terse_lrcellwgraphs  terse_rcellorder  terse_rcells  terse_rcellwgraphs  terse_sstratification
interface/messages/: betti.help  cell.help  coatoms.help  cr.help  default.help  descent.help  duflo.help  empty_m.help1  fullcontext.help  ihbetti.help  inorder.help  interface.help  interface_m.help1  invpol.help  lcellorder.help  lcorder.help  lcwgraphs.help  lrcorder.help  main.help1  mu.help  neg_coeff.err  permutation.mess  rank.help  rcells.mess  rcorder.help  rcwgraph.help  rcwgraphs.help  resize.err  schubert.help  schubert_m.help  silent.help  special.defhelp  sstratification.help  type_m.help  uneq.help  uneq.help1  verbose.help
interface/messages/interface/: alphabetic.help  decimal.help  gap.help  in.help  ordering.help
interface/messages/interface/in/: bourbaki.help  decimal.help  default.help  gap.help  permutation.help  prefix.help  symbol.help
interface/messages/uneq/: lcells.mess  lrcorder.help  lrcorder.mess  rcells.help  rcorder.help  rcorder.mess
src/: Makefile.am  bits.cpp  bits.h  constants.h  coxgroup.h  coxtypes.cpp  coxtypes.h  dotval.h  error.cpp  fcoxgroup.h  general.cpp  graph.cpp  invkl.cpp  invkl.h  iterator.h  kl.h  klsupport.h  list.hpp  memory.cpp  minroots.cpp  minroots.h  posets.h  schubert.cpp  schubert.h  search.h  stack.hpp  transducer.cpp  transducer.h  type.cpp  type.h  typeA.cpp  typeA.h  vector.h  vector.hpp
src/coxeter_matrices/: E10  E11  E15  b2  b3  b4  c3  c4  c5  d4  e6  e7  e8  f4  g2  howlett2_3  howlett2_5  howlett2_6  howlett3  star_3,3,3
(+43 files in other folders)
